2006-03-30  Danilo Piazzalunga  <danilopiazza@gmail.com>

	* configure.in: enable documentation even if doxygen and/or graphviz
	are missing, so the docs will be installed when building a release.
	* docs/reference/Makefile.am: don't remove html directory with `make clean`,
	so that users of the tarball releases don't destroy the pre-built
	documentation when running make clean. Change to maintainer-clean

2006-03-29  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* configure.in: added tests for doxygen and graphviz which displays a
	warning if the user has --enable-docs set but doesn't have doxygen or
	graphviz installed.  

2006-03-28  Danilo Piazzalunga  <danilopiazza@gmail.com>

	* cairomm/enums.h: Stop using CAIRO_EXTEND_PAD, as it only exists
	in the 1.1.1 development branch.

2006-03-14  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* configure.in:
	* examples/Makefile.am:
	* examples/text-rotate/.cvsignore:
	* examples/text-rotate/Makefile.am:
	* examples/text-rotate/text-rotate.cc: Added another basic example,
	borrowed from a test-case in cairo.  This one is just a simple example of
	using text in cairomm

2006-03-14  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* cairomm/fontface.h:
	* cairomm/fontoptions.h:
	* cairomm/path.h:
	* cairomm/pattern.h: include <cairo.h> instead of <cairo/cairo.h> since it
	didn't want to compile on windows without these
	* cairomm/win32_surface.cc:
	* cairomm/win32_surface.h: Move the include of cairo-win32.h from the
	source file to the header since the declaration of create() needs the HDC
	type definition.
	With these changes, cairomm should compile the Win32Surface cleanly with
	mingw on Microsoft Windows

2006-03-12  Danilo Piazzalunga  <danilopiazza@gmail.com>

	* autogen.sh: Allow overriding aclocal, automake, autoconf and libtoolize
	using environment variables. Taken from cairo's autogen.sh.

2006-03-06  Jonathon Jongsma  <jonathon.jongsma@gmail.com>
